# img_in_py

./: __init__.py  __main__.py  pyproject.toml  readme.md
app/: main.py
src/: __init__.py
src/Classes/: __init__.py  src_img.py
src/Functions/: __init__.py  crop_img.py
